# cam-mouse

./: LICENSE  README.md  pyproject.toml
cam_mouse/: __init__.py
